--- a/youqu/flyleaf.html
+++ b/youqu/flyleaf.html
@@ -1,1 +1,1 @@
-<div class="flyleaf"><div class="say"></div><a href="#/test" class="link"></a></div>
+<div class="flyleaf"><div class="say"></div><a href="#/test" class="link"></a><div class="click"></div></div>
