--- a/youqu/home.html
+++ b/youqu/home.html
@@ -1,1 +1,1 @@
-<div class="home"><h1 class="title">自驾大挑战</h1><a href="#/flyleaf" class="link"></a></div>
+<div class="home"><h1 class="title">自驾大挑战</h1><a href="#/flyleaf" class="link"></a><div class="click"></div></div>
